# ignkafasr

./: .gitignore  .gitmodules  README.md  docker-compose.yml
authserver/: build.gradle.kts
authserver-app/: docker-compose.yml
bqproducer/: .gitignore  bqproducer-deployment.yaml
bqproducer-app/: .gitignore  Dockerfile  README.md  pyproject.toml
bqproducer-app/bqproducer/: bq_util.py  core.py  entry.py  my_constants.py
bqproducer-app/bqproducer/protobuf/: analysis_result_sid.proto  analysis_result_sid_pb2.py  video_to_sid.proto  video_to_sid_pb2.py
dev/: .gitignore  docker-compose.yml  ignite-config.xml
dlytaudio/: dlytaudio-cluster-role.yaml  dlytaudio-deployment.yaml  dlytaudio-sa.yaml
dlytaudio-app/: .gitignore  Dockerfile  README.md  pyproject.toml
dlytaudio-app/dlytaudio/: audio_util.py  core.py  entry.py  ignite_util.py  kafka_util.py  my_constants.py  youtube_util.py
dlytaudio-app/dlytaudio/protobuf/: analysis_request.proto  analysis_request_pb2.py  analysis_result_basic_pb2.py  speech_request.proto  speech_request_pb2.py
gke/: managed-cert.yaml
ignasr/: ignasr-cluster-role.yaml  ignasr-deployment.yaml  ignasr-ingress-gke.yaml  ignasr-sa.yaml  ignasr-service.yaml  ignasr-static-ip-gke.sh
ignasr-app/: .gitignore  README.md  build.gradle.kts  gradle.properties  pom.xml  settings.gradle.kts
ignasr-app-kt/: build.gradle.kts  settings.gradle.kts
ignasr-app-kt/.run/: SpeechUploadHandlerTest.run.xml
ignasr-app/.run/: SpeechUploadHandlerIntegrationTest.run.xml  limdongjin.ignasr in ignasr-app.run.xml  limdongjin.ignasr in ignasr.test.run.xml
ignasr-app/tmp/: pom.xml
ignasr-spring-app/: image_build_script.sh  pom.xml
ignasr/local/: ignasr-service-local.yaml  ignstom-ingress-local.yaml
ignasr/tmp/: ignasr-deployment.yaml
ignite/: README.md  ignite-cluster-role.yaml  ignite-configmap.yaml  ignite-deployment.yaml  ignite-sa.yaml  ignite-service.yaml  node-configuration.xml
ignkafasr-front/: .env.development  .gitignore  README.md  app.yaml  build_command.sh  package.json  tsconfig.json
ignkafasr-front/pages/: main.tsx
ignkafasr-front/src/components/: maincontent.tsx  registercontent.tsx  verifyfile.tsx
ignkafasr-front/src/constants/: index.ts
ignkafasr-front/src/helpers/: audio.helper.ts
ignkafasr-front/src/services/: registration.service.ts  verification.service.ts
kafka-cluster/client/: config.properties  example.sh
kafka-cluster/kafka/: my-cluster-local.yaml  my-cluster.yaml
kafka-cluster/topic/: infer-negative.yaml  infer-positive.yaml  infer.yaml  user-pending.yaml
kafka-cluster/user/: ignasr.yaml  scram-user.yaml  spbrain-t.yaml  spbrain.yaml  stomasr.yaml
scrap-app/: Dockerfile  README.md  pyproject.toml
scrap-app/core/: cassandra.py  entry.py  exception.py  ignite.py  scrap_loop.py  youtube_downloader.py
scrap-app/core/protobuf/: analysis_result_basic.proto
searchyt/: searchyt-deployment.yaml
searchyt-app/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
searchyt-app/searchyt/: core.py  entry.py  my_constants.py  youtube_util.py
searchyt-app/searchyt/protobuf/: search_request.proto  search_request_pb2.py
sid/: sid-cluster-role.yaml  sid-deployment.yaml  sid-sa.yaml
sid-app/: .gitignore  Dockerfile  README.md  pyproject.toml
sid-app/sid/: audio_featurizer_util.py  audio_processing.py  core.py  entry.py  kafka_util.py  my_constants.py  nemo_audio_processing_util.py  speaker_recognition.py  torch_util.py  voice_activity_detection.py  whisper_api_util.py
sid-app/sid/whisper_cpp_cdll/: core.py  types.py
spbrain/: spbrain-cluster-role.yaml  spbrain-deployment.yaml  spbrain-sa.yaml  spbrain-service.yaml  spbrain-t-deployment.yaml
spbrain-app/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.transcribe  README.md  main.py  my_main.py  my_main2.py  pyproject.toml  requirements.txt
spbrain-app/asrspeech/: core.py  speech_service.py  verify_loop.py
spbrain-app/asrspeech/protobuf/: infer.proto  infer_pb2.py  userpending.proto  userpending_pb2.py
spbrain-app/spbrain/: __init__.py  __main__.py  core.py  utils.py
spbrain-app/tests/: __main__.py  test.py  test_kafka_ignite_spbrain_integration.py
spbrain-app/tmp/: setup.py
spbrain-app/tmp/tmp2/: requirements.txt
speaker-recognition-app/: .gitignore  Dockerfile  README.md  pyproject.toml
speaker-recognition-app/core/: audio_processing.py  cassandra_util.py  entry.py  ignite_util.py  kafka_util.py  my_constants.py  nemo_vad_util.py  speaker_recognition.py  sr_loop.py  voice_activity_detection.py
speaker-recognition-app/core/protobuf/: analysis_result_sid.proto  analysis_result_sid_pb2.py
speaker-verification-service/ignkafasr-front/: .env.production  package-lock.json
speaker-verification-service/ignkafasr-front/pages/: index.tsx  upload.tsx  uploadfile.tsx  verifyfile.tsx
speaker-verification-service/kafka-cluster/topic/: infer.transcription.yaml  infer.verification.yaml  user-pending.yaml
speaker-verification-service/kafka-cluster/user/: ignasr.yaml  spbrain.yaml
speaker-verification-service/spbrain/: spbrain-deployment.yaml  spbrain-t-deployment.yaml
speaker-verification-service/spbrain-app/: .gitignore  Dockerfile  README.md
speaker-verification-service/spbrain-app/asrspeech/: entry.py  transcribe_loop.py  util.py
speaker-verification-service/stomasr/: stomasr-deployment.yaml  stomasr-ingress-gke.yaml  stomasr-sa.yaml  stomasr-static-ip-gke.sh
speaker-verification-service/stomasr-app/: .gitignore  README.md
speaker-verification-service/stomasr/local/: stomasr-ingress-local.yaml
speechbrain/: spbrain-deployment.yaml  spbrain-service.yaml
speechbrain-app/: Dockerfile  my_main.py  requirements.txt
stomasr/: register-to-dns.sh  stomasr-cluster-role.yaml  stomasr-deployment.yaml  stomasr-service-gke.yaml
stomasr-app/: .gitignore  README.md  build.gradle.kts  image_build_script.sh  pom.xml  settings.gradle.kts
stomasr/local/: stomasr-service-local.yaml
stomasr/local/tmp/: stomasr-deployment.yaml
util/: generate-bq-config.sh  generate-kafka-info.sh
(+176 files in other folders)
