[tool.poetry]
name = "bqproducer"
version = "0.1.0"
description = ""
authors = ["limdongjin <geniuslim27@gmail.com>"]
readme = "README.md"
packages = [{include = "bqproducer"}]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.0.2"
google-cloud-bigquery = "^3.6.0"
google-cloud-bigquery-connection = "^1.9.1"
google-cloud-bigquery-storage = "^2.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
