[tool.poetry]
name = "searchyt-app"
version = "0.1.0"
description = ""
authors = ["limdongjin <geniuslim27@gmail.com>"]
readme = "README.md"
packages = [{include = "searchyt"}]

[tool.poetry.dependencies]
python = ">=3.8"
confluent-kafka = "^1.9.2"
protobuf = ">=3.6.0"
pytube = "^12.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
