[tool.poetry]
name = "spbrain"
version = "0.1.0"
description = ""
authors = ["limdongjin <geniuslim27@gmail.com>"]
readme = "README.md"
packages = [{include = "asrspeech"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyignite = "^0.6.0"
# https://pytorch.org/get-started/previous-versions/
# https://download.pytorch.org/whl/cpu
# https://github.com/python-poetry/poetry/issues/2138
# https://github.com/python-poetry/poetry/issues/4231
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-1.12.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
]
torchaudio = [
    { url = "https://download.pytorch.org/whl/cpu/torchaudio-0.12.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers="sys_platform == 'linux'" }
]
speechbrain = ">=0.5.13"
confluent-kafka = "^1.9.2"
openai-whisper = { url = "https://github.com/openai/whisper/archive/refs/tags/v20230124.tar.gz" }
protobuf = ">=3.6.0"

[tool.poetry.group.dev.dependencies]
# kafka-python = "2.0.1"
testcontainers = "3.5.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
