[tool.poetry]
name = "speaker-recognition-app"
version = "0.1.0"
description = ""
authors = ["limdongjin <geniuslim27@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.9"
cassandra-driver = "^3.25.0"
pyignite = "^0.6.0"
confluent-kafka = "^2.0.2"
protobuf = "^4.21.12"
speechbrain = "^0.5.13"
# https://download.pytorch.org/whl/cpu
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-1.12.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
]
torchaudio = [
    { url = "https://download.pytorch.org/whl/cpu/torchaudio-0.12.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers="sys_platform == 'linux'" }
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
